--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+static
+.idea
+db.sqlite3
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
