--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django
-djangorestframework
-names
-requests
-coreapi
+coreapi==2.3.3
+Django==1.11.11
+django-rest-swagger==2.1.2
+djangorestframework==3.7.7
+names==0.3.0
+requests==2.18.4
+typing==3.6.4
