--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-coreapi==2.3.3
-Django==1.11.11
-django-rest-swagger==2.1.2
-djangorestframework==3.7.7
-names==0.3.0
-requests==2.18.4
-typing==3.6.4
+celery==4.1.0                                                                                                                                                             │
+coreapi==2.3.3                                                                                                                                                            │
+Django==1.11.11                                                                                                                                                           │
+django-celery==3.2.2                                                                                                                                                      │
+django-rest-swagger==2.1.2                                                                                                                                                │
+djangorestframework==3.7.7                                                                                                                                                │
+names==0.3.0                                                                                                                                                              │
+pytest==3.4.2                                                                                                                                                             │
+redis==2.10.6                                                                                                                                                             │
+requests==2.18.4                                                                                                                                                          │
+typing==3.6.4                                                                                                                                                             │
