--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,34 @@
-celery==4.1.0                                                                                                                                                             │
-coreapi==2.3.3                                                                                                                                                            │
-Django==1.11.11                                                                                                                                                           │
-django-celery==3.2.2                                                                                                                                                      │
-django-rest-swagger==2.1.2                                                                                                                                                │
-djangorestframework==3.7.7                                                                                                                                                │
-names==0.3.0                                                                                                                                                              │
-pytest==3.4.2                                                                                                                                                             │
-redis==2.10.6                                                                                                                                                             │
-requests==2.18.4                                                                                                                                                          │
-typing==3.6.4                                                                                                                                                             │
+amqp==1.4.9
+anyjson==0.3.3
+attrs==17.4.0
+billiard==3.3.0.23
+celery==3.1.25
+certifi==2018.1.18
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+Django==1.11.11
+django-celery==3.2.2
+django-rest-swagger==2.1.2
+djangorestframework==3.7.7
+funcsigs==1.0.2
+idna==2.6
+itypes==1.1.0
+Jinja2==2.10
+kombu==3.0.37
+MarkupSafe==1.0
+names==0.3.0
+openapi-codec==1.3.2
+pkg-resources==0.0.0
+pluggy==0.6.0
+py==1.5.2
+pytest==3.4.2
+pytz==2018.3
+redis==2.10.6
+requests==2.18.4
+simplejson==3.13.2
+six==1.11.0
+typing==3.6.4
+uritemplate==3.0.0
+urllib3==1.22
+vine==1.1.4
